--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,10 @@
 			<!--<version>1.1.2</version>-->
 		<!--</dependency>-->
 
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
